# advent-of-code-2022

./: Cargo.toml  build.rs
scripts/: pre-push
src/day1/: main.rs
src/day10/: main-p1.rs  main-p2.rs
src/day11/: main-p1.rs  main-p2.rs
src/day12/: main-p1.rs  main-p2.rs  test1.txt  test2.txt  test3.txt
src/day13/: day13.rs  main-p1.rs  main-p2.rs
src/day14/: main-p1.rs  main-p2.rs
src/day15/: main-p1.rs  main-p2.rs
src/day16/: main-p1.rs
src/day2/: main-p1.rs  main-p2.rs
src/day20/: main-p1.rs  main-p2.rs  tests.rs
src/day21/: main-p1.rs  main-p2.rs
src/day3/: main-p1.rs  main-p2.rs
src/day4/: main-p1.rs  main-p2.rs  main-p3.rs
src/day5/: main-p1.rs  main-p2.rs  main-p3.rs
src/day6/: main-p1.rs  main.rs
src/day7/: main-p1.rs  main-p2.rs
src/day8/: main-p1.rs  main-p2.rs
src/day9/: main.rs
