[package]
name = "Advent-of-Code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2-p1"
path = "src/day2/main-p1.rs"
[[bin]]
name = "day2-p2"
path = "src/day2/main-p2.rs"

[[bin]]
name = "day3-p1"
path = "src/day3/main-p1.rs"
[[bin]]
name = "day3-p2"
path = "src/day3/main-p2.rs"

[[bin]]
name = "day4-p1"
path = "src/day4/main-p1.rs"
[[bin]]
name = "day4-p2"
path = "src/day4/main-p2.rs"
#[[bin]]
#name = "day4-p3"
#path = "src/day4/main-p3.rs"

[[bin]]
name = "day5-p1"
path = "src/day5/main-p1.rs"
[[bin]]
name = "day5-p2"
path = "src/day5/main-p2.rs"
[[bin]]
name = "day5-p3"
path = "src/day5/main-p3.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7-p1"
path = "src/day7/main-p1.rs"
[[bin]]
name = "day7-p2"
path = "src/day7/main-p2.rs"

[[bin]]
name = "day8-p1"
path = "src/day8/main-p1.rs"
[[bin]]
name = "day8-p2"
path = "src/day8/main-p2.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10-p1"
path = "src/day10/main-p1.rs"
[[bin]]
name = "day10-p2"
path = "src/day10/main-p2.rs"

[[bin]]
name = "day11-p1"
path = "src/day11/main-p1.rs"
[[bin]]
name = "day11-p2"
path = "src/day11/main-p2.rs"

[[bin]]
name = "day12-p1"
path = "src/day12/main-p1.rs"
[[bin]]
name = "day12-p2"
path = "src/day12/main-p2.rs"

[features]
default = [ "part2" ]
print-tree = []
part1 = []
part2 = []

[dependencies]
itertools = "0.8.0"
num = "0.4.0"
